--- a/_config.yml
+++ b/_config.yml
@@ -51,13 +51,16 @@ round-avatar: true
 # You can change the order that they show up on the page by changing the order here.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
-  rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  facebook: deanattali
-  github: daattali
+  email: "nwaforsojo@gmail.com"
+  facebook: Chindo Nwafor
+  github: nwaforchibundo
   twitter: daattali
-  patreon: DeanAttali
-  youtube: c/daattali
+  youtube: nwafor chibundo
+  ORCID: your ORCID ID
+  linkedin: daattali
+  google-scholar: your google scholar
+#  patreon: DeanAttali
+#  rss: true  # remove this line if you don't want to show an RSS link at the bottom
 #  medium: yourname
 #  reddit: yourname
 #  linkedin: daattali
