--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ social-network-links:
   facebook: Chindo Nwafor
   github: nwaforchibundo
   twitter: daattali
-  youtube: nwafor chibundo
+  youtube: "https://www.youtube.com/@nwaforchinbundo/playlists"
   ORCID: your ORCID ID
   linkedin: daattali
   google-scholar: your google scholar
