--- a/_config.yml
+++ b/_config.yml
@@ -54,11 +54,12 @@ social-network-links:
   email: "nwaforsojo@gmail.com"
   facebook: Chindo Nwafor
   github: nwaforchibundo
-  twitter: daattali
+  twitter: Nwaforsojo
   youtube: "@nwaforchinbundo/playlists"
-  ORCID: your ORCID ID
-  linkedin: daattali
-  google-scholar: your google scholar
+  ORCID: 0000-0002-4996-6725
+  linkedin: nwafor-chibundo-66a27b203
+  google-scholar: "citations?user=08ndx8oAAAAJ&hl=en#"
+  telephone: +33758279944
 #  patreon: DeanAttali
 #  rss: true  # remove this line if you don't want to show an RSS link at the bottom
 #  medium: yourname
