--- a/_config.yml
+++ b/_config.yml
@@ -295,6 +295,14 @@ exclude:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
+  - jekyll-scholar
 
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
+
+scholar:
+  style: current-opinion
+  #bibliography_list_tag: 'div'
+  #bibliography_item_tag: 'p'
+
+
