--- a/_config.yml
+++ b/_config.yml
@@ -295,7 +295,14 @@ exclude:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jemoji
+  - jekyll-include-cache
   - jekyll-scholar
+
+scholar:
+  style: current-opinion
   
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
