--- a/_config.yml
+++ b/_config.yml
@@ -298,7 +298,7 @@ plugins:
   - jekyll-scholar
 
 scholar:
-  style: current-opinion
+  style: modern-language-association
   
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
