--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,47 +1,15 @@
-name: CI
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-concurrency:
-  group: ci-${{ github.ref }}
-  cancel-in-progress: true
+name: Beautiful Jekyll CI
+on: [push, pull_request]
 jobs:
-  ci:
-    name: ${{ matrix.ruby-version }} ${{ matrix.friendlyName }}-${{ matrix.arch }}
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        ruby-version:
-          - "2.6"
-          - "2.7"
-          - "3.0"
-          - "3.1"
-          - "3.2"
-        os:
-          - ubuntu-latest
-          - macos-latest
-          - windows-latest
-        arch:
-          - x64
-        include:
-          - os: ubuntu-latest
-            friendlyName: Linux
-          - os: macos-latest
-            friendlyName: macOS
-          - os: windows-latest
-            friendlyName: Windows
-
+  build:
+    name: Build Jekyll
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: Setup Ruby and install bundle
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: ${{ matrix.ruby-version }}
-          bundler-cache: true
-      - name: Compile and run test
-        run: bundle exec cucumber
-
+      - uses: actions/checkout@v3
+      - name: Build the site in the jekyll/builder container
+        run: |
+          export JEKYLL_VERSION=3.8
+          docker run \
+          -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
+          -e PAGES_REPO_NWO=${{ github.repository }} \
+          jekyll/builder:$JEKYLL_VERSION /bin/bash -c "chmod 777 /srv/jekyll && jekyll build --future"
