--- a/_config.yml
+++ b/_config.yml
@@ -296,6 +296,11 @@ exclude:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
+  - jekyll-scholar
+
+scholar:
+  style: modern-language-association
+
   
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
