--- a/_config.yml
+++ b/_config.yml
@@ -282,15 +282,16 @@ defaults:
       layout: "page"
 
 # Exclude these files from production site
-exclude:
-  - CHANGELOG.md
-  - CNAME
-  - Gemfile
-  - Gemfile.lock
-  - LICENSE
-  - README.md
-  - screenshot.png
-  - docs/
+# exclude:
+#  - CHANGELOG.md
+#  - CNAME
+#  - Gemfile
+#  - Gemfile.lock
+#  - LICENSE
+#  - README.md
+#  - screenshot.png
+#  - docs/
+#  - vendor/
 
 plugins:
   - jekyll-paginate
@@ -298,8 +299,7 @@ plugins:
   - jekyll-scholar
 
 scholar:
-  style: modern-language-association
-  bibliography_template: bib
+  style: current-opinion
 
   
 # Beautiful Jekyll / Dean Attali
