--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: NWAFOR Chibundo
+title: Home-page
 
 # Your name to show in the footer
 author: NWAFOR Chibundo
