--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ author: NWAFOR Chibundo
 navbar-links:
   About Me: "aboutme"
   Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
+    - Current Workplace: "https://www.femto-st.fr/en/femto-people/chibundonwafor"
     - Learn markdown: "https://www.markdowntutorial.com/"
   Author's CV: "https://nwaforchibundo.github.io/cv/"
 
