--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ navbar-links:
   Resources:
     - Current Workplace: "https://www.femto-st.fr/en/femto-people/chibundonwafor"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's CV: <a href="https://nwaforchibundo.github.io/cv/" target="_blank">example</a>
+  Author's CV: <a href="http://stackoverflow.com" target="_blank">Go</a>
 
 ################
 # --- Logo --- #
