--- a/_config.yml
+++ b/_config.yml
@@ -299,6 +299,9 @@ plugins:
 
 scholar:
   style: current-opinion
+
+kramdown:
+  input: Kramdown
   
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
