--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ navbar-links:
   Resources:
     - Current Workplace: "https://www.femto-st.fr/en/femto-people/chibundonwafor"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's CV: [Stackoverflow The Key](https://stackoverflow.blog/2021/03/31/the-key-copy-paste/){:target="_blank" rel="noopener"}
+  Author's CV: "https://nwaforchibundo.github.io/cv/"
 
 ################
 # --- Logo --- #
@@ -262,7 +262,7 @@ permalink: /:year-:month-:day-:title/
 paginate: 5
 
 kramdown:
-  input: Kramdown 
+  input: GFM 
 
 # Default YAML values (more information on Jekyll's site)
 defaults:
