--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ navbar-links:
   Resources:
     - Current Workplace: "https://www.femto-st.fr/en/femto-people/chibundonwafor"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's CV: "https://www.WordPress.com" target="_blank"
+  Author's CV: "https://nwaforchibundo.github.io/cv/"
 
 ################
 # --- Logo --- #
