--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ round-avatar: true
 social-network-links:
   email: "nwaforsojo@gmail.com"
   facebook: Chindo Nwafor
-  github: nwaforchibundo
+# github: nwaforchibundo
   twitter: Nwaforsojo
   youtube: "@nwaforchinbundo/playlists"
   ORCID: 0000-0002-4996-6725
