--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,8 @@ navbar-links:
   Resources:
     - Current Workplace: "https://www.femto-st.fr/en/femto-people/chibundonwafor"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's CV: "https://nwaforchibundo.github.io/"
+  Old account: "https://nwaforchibundo.github.io/"
+  Author's CV: "NWAFOR_Chibundo_Resume_English.pdf"
 
 ################
 # --- Logo --- #
